# ESP32-IDF-LED-CONTROLLER

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.esp32-poe-idf
.pio/libdeps/esp32-poe-idf/StreamUtils/: .piopm
components/cJSON/: CMakeLists.txt
components/hsg_api/: CMakeLists.txt  ESP32-POE.html  HSG-API.cpp
components/hsg_api/include/: HSG-API.h
components/hsg_outputs/: CMakeLists.txt  hsg_outputs.cpp  hsg_pca9685.cpp
components/hsg_outputs/include/: hsg_outputs.h  hsg_pca9685.h
components/mcp2515/: CMakeLists.txt  mcp2515.c  mcp2515.h  mcp2515_defs.h
lib/HSG-API-LIB/src/: HSG_API.h
lib/HSG-MQTT-LIB/src/: HSG_MQTT.h
src/: CMakeLists.txt  can_protocol.h  main.cpp
